Toggle switch added

--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,17 @@
   "icons": {
     "48": "images/hello-48.png"
   },
+  "background": {
+    "service_worker": "scripts/background.js"
+  },
   "action": {
     "default_popup": "dpe.html"
   },
+  "permissions": ["activeTab", "storage"],
   "content_scripts": [
     {
       "js": ["scripts/overlay.js"],
+      "css": ["dark.css"],
       "matches": ["file:///*"]
     }
   ]
